✨ Feature: new version with mysql2
